2002-07-24  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_string_flagtoa, bk_string_atoflag): avoid using
	'=' [looks like parameter assignment]; use traditional <> delimiters
	(bk_string_atoflag): more aggressive error checking
	(bk_strnstr, bk_strstrn): fix fencepost error in non-MEMMEM code

2002-07-23  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_string.c (bk_string_atod): assign value when parsing zero val

	* include/libbk_oscompat.h (UINT64_MAX): portability

	* lib/b_string.c (bk_string_flagtoa, bk_string_atoflag): revised to
	support symbolic flag i/o with kernel %b / printb style flag names
	(bk_string_atoull_int, bk_sting_ato[ui], bk_sting_ato[ui]ll): better
	error checking, including: overflow, garbage with no digits, negative
	signs in unsigned parse; correct handling of INT_MIN, LLONG_MIN
	(NAN, INFINITY): portability

2002-07-22  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_STRING_ATOD_FLAG_ALLOW_INF, NAN): new flags,
	add const to some debug, error print arguments
	
	* lib/b_string.c (bk_string_atod, bk_string_atof): allow infinity or
	not-a-number if you ask for it with flags
	
	* lib/b_debug.c (bk_debug_*print*): add const to some arguments

	* lib/b_error.c (bk_error_*print*): add const to some arguments

2002-07-19  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_string.c (bk_strhash): Import new hash function.  Perl and
	its author claim that it is good.  We'll see.

2002-07-16  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c: Stupid bounds checking.

	* lib/b_rand.c: Stupid bounds checking.

2002-07-12  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_error.c (be_error_time): fit timestamp in space provided
	(be_error_output): use shorter timestamps, limit program name size
	(be_error_append): use shorter timestamps, limit program name size

2002-07-08  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_crc.c: computation of CRC-32

2002-06-28  Alexander Dupuy  <dupuy@sysdetect.com>
